--- a/display-exercise.html
+++ b/display-exercise.html
@@ -17,6 +17,12 @@
 </head>
 <body>
 <!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+	<div class="outerbox">
+    <div class="greenbox"> </div>
+    <div class="bluebox"> </div>
+    <div class="greybox"> </div>
+    <div class="blackbox"> </div>
+    <div class="orangebox"> </div>
+  </div>
 </body>
 </html>
