--- a/position-exercise.html
+++ b/position-exercise.html
@@ -29,6 +29,11 @@
 
   <main>
     <!-- Put the HTML you need to accomplish the design -->
+
+    <div class="greenbox">
+      <img src="images/spacecat.png" class="cat">
+      <img src="images/spacedog.png" class="dog">
+    </div>
   </main>
 </body>
 </html>
